--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,9 +20,7 @@ jobs:
         ndk-version: r20b
         add-to-path: false
     - name: Move NDK
-      run: mv ${ANDROID_NDK_HOME} ${HOME}/android-ndk-r20b
-      env:
-        ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+      run: mv ${{ steps.setup-ndk.outputs.ndk-path }} ${HOME}/android-ndk-r20b
     - name: Install mingw compiler
       run: apt install gcc-mingw-w64-i686 gcc -y
     - name: Build
