--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
+    - name: Set up Homebrew
+      id: set-up-homebrew
+      uses: Homebrew/actions/setup-homebrew@master
+    - name: Set up ldid
+      run: brew install ldid
     - name: Build
       run: make
     - name: Pack binaries
