--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
         make current
         make clean
         chmod 777 ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
-        sed "s/urrentProtocol byte = 10/urrentProtocol byte = 8/g" ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go>~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
+        sed "s/urrentProtocol byte = 10/urrentProtocol byte = 8/g" ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go>~/conn.go
+        cp -f ~/conn.go ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
     - name: Build
       run: make
     - name: Pack binaries
@@ -69,7 +70,8 @@ jobs:
         make current
         make clean
         chmod 777 ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
-        sed "s/urrentProtocol byte = 10/urrentProtocol byte = 8/g" ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go>~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
+        sed "s/urrentProtocol byte = 10/urrentProtocol byte = 8/g" ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go>~/conn.go
+        cp -f ~/conn.go ~/go/pkg/mod/github.com/sandertv/go-raknet@v1.7.6/conn.go
     - name: Build
       run: make
     - name: Pack binaries
