--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "upload-to-server"
+      - "release"
 
 jobs:
   linux-build:
@@ -23,8 +23,9 @@ jobs:
         add-to-path: false
     - name: Move NDK
       run: mv ${{ steps.setup-ndk.outputs.ndk-path }} ${HOME}/android-ndk-r20b
-    - name: Install mingw compiler
-      run: sudo apt install gcc-mingw-w64-i686 gcc -y
+    - name: Install compilers
+      run: |
+        sudo apt install gcc-mingw-w64-i686 gcc-mingw-w64-x86-64 gcc gcc-aarch64-linux-gnu -y
     - name: Setup theos's dependencies
       run: sudo apt install fakeroot git perl unzip build-essential libtinfo5
     - name: Clone theos
@@ -49,6 +50,15 @@ jobs:
         unzip -q master.zip -d $TMP
         mv $TMP/sdks-master/*.sdk $THEOS/sdks
         rm -r master.zip $TMP
+    - name: Clone macOS SDK
+      uses: actions/checkout@v2
+      with:
+        repository: 'phracker/MacOSX-SDKs'
+        path: 'macOS-sdks'
+    - name: Configure macOS SDK
+      run: |
+        mv $GITHUB_WORKSPACE/macOS-sdks/MacOSX11.0.sdk ~/theos/sdks/MacOSX11.0.sdk
+        rm -rf $GITHUB_WORKSPACE/macOS-sdks
     - name: Pre-Build & configure go-raknet
       run: |
         make current
@@ -68,6 +78,10 @@ jobs:
       run: |
         #mv build/hashes.json build/hashes-2.json
         mv release/*.deb build/
+        rm build/phoenixbuilder-macos-arm64
+        rm build/phoenixbuilder-macos-x86_64
+        ls -lh build/>release.txt
+        mv release.txt build/release-list.txt
         tar -czf fb-linux-binaries.tar.gz build/*
     - name: Load Key
       env:
@@ -77,11 +91,11 @@ jobs:
         mkdir -p ~/.ssh
         printf "StrictHostKeyChecking no\nUserKnownHostsFile /dev/null">~/.ssh/config
         chmod 0600 ~/fbkey
-    - name: Upload binaries
+    - name: Upload binaries and publish
       run: |
         echo "put fb-linux-binaries.tar.gz">~/a
         sftp -i ~/fbkey -b ~/a root@fastbuilder.pro
-        ssh -i ~/fbkey root@fastbuilder.pro "mkdir -p fbbinaries;mv fb-linux-binaries.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rm -rf build"
+        ssh -i ~/fbkey root@fastbuilder.pro "mkdir -p fbbinaries;mv fb-linux-binaries.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rm -rf build;cd ~/cv4;node updateHashes.js ../fbbinaries/hashes.json mv ../fbbinaries/* /var/www/pro/downloads/phoenix/"
 
 
 
