--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
       run: |
         echo "put fb-linux-binaries.tar.gz">~/a
         sftp -i ~/fbkey -b ~/a root@fastbuilder.pro
-        ssh -i ~/fbkey root@fastbuilder.pro "mkdir -p fbbinaries;mv fb-linux-binaries.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rm -rf build;cd ~/cv4;node updateHashes.js ../fbbinaries/hashes.json mv ../fbbinaries/* /var/www/pro/downloads/phoenix/"
+        ssh -i ~/fbkey root@fastbuilder.pro "mkdir -p fbbinaries;mv fb-linux-binaries.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rm -rf build;cd ~/cv4;node updateHashes.js ../fbbinaries/hashes.json;mv ../fbbinaries/* /var/www/pro/downloads/phoenix/"
 
 
 
