--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,10 @@ jobs:
     #    rm -rf $GITHUB_WORKSPACE/macOS-sdks
     # Debian/Ubuntu provided LLVM only support native targets, using Homebrew prebuilt for all targets
     - name: Setup LLVM dependencies
-      run: sudo apt install libffi7 libedit2 libxml2 libncursesw6 binutils elfutils
+      run: |
+        sudo apt install libedit2 libxml2 libncursesw6 binutils elfutils
+        wget -q http://ftp.debian.org/debian/pool/main/libf/libffi/libffi8_3.4.2-4_amd64.deb
+        sudo dpkg -i libffi8_3.4.2-4_amd64.deb
     - name: Cache LLVM
       id: cache-llvm
       uses: actions/cache@v3
