--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "depends"]
 	path = depends
-	url = ../phoenixbuilder-depends
+	url = https://github.com/LNSSPsd/phoenixbuilder-depends.git
