--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,13 +149,12 @@ jobs:
         ls -lh build/>release.txt
         mv release.txt build/release-list.txt
         cp version build/version.txt
+        rm -f build/phoenixbuilder-macos-arm64 build/phoenixbuilder-macos-x86_64
         mv build ../build/gui
         cd ..
     - name: Pack binaries
       run: |
         mv release/*.deb build/
-        rm build/phoenixbuilder-macos-arm64
-        rm build/phoenixbuilder-macos-x86_64
         ls -lh build/>release.txt
         mv release.txt build/release-list.txt
         cp version build/version.txt
