地皮组件（新）
增强了与用户交互
修改了已知的bug

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1642,5 +1642,52 @@
       "Omega启动时是否自动继续导入": true,
       "忽略方块nbt信息": true
     }
-  }  
+  },
+  {
+    "名称": "第三方_by温柔_地皮组件",
+    "描述": " 地皮白名单有且仅有99名额",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Built-In",
+    "配置": {
+      "菜单显示项目": {
+        "购买地皮": "1购买地皮",
+        "返回地皮": "2返回地皮",
+        "给予白名单": "3授予地皮"
+      },
+      "各种提示词": {
+        "无地皮提示词": "[无地皮对象] 你没有地皮 请购买后再尝试",
+        "地皮主人选择器": "@a[name=\"[地皮主人]\"]",
+        "购买地皮时检测指令": "testfor @a[name=\"[购买地皮的人]\",scores={[货币计分板]=[地皮价格]..}]",
+        "购买地皮指令检测失败后提示": "[购买地皮的人] 你[货币计分板]余额不足",
+        "提示确认地皮大小提示词": "领地的大小为：[地皮大小] \n消耗[购买地皮计分板][价格]\n确定购买吗？（y/n）",
+        "自定义购买时提示输入地皮大小" :"[购买对象] 请输入所需要地皮大小 格式【dx】 【dy】\n比如你要50x50的地皮则输入:50 50 请记住50与50之间需要空格\n价格:\n占地面积每格[每格价格]",
+        "删除地皮成功提示":"成功删除自己地皮",
+        "删除白名单成功提示":"你已经成功删除[删除对象]"
+        
+      },
+      "扣除货币的积分板": "can",
+      "购买地皮时执行的指令":[
+        "title @a[name=\"[购买对象名字]\"] actionbar 已扣除你[货币计分板] [价格]",
+        "scoreboard players remove @a[name=\"[购买对象名字]\"] [货币计分板] [价格]"
+      ],
+      "地皮保护时执行的指令": [
+        "gamemode 2 @a[[非地皮合法进入者],[地皮范围],m=!2]",
+        "title @a[[地皮范围]] actionbar 你已经进入地皮范围\n地皮主人:[地皮主人]\n地皮范围:[地皮范围] "
+      ],
+      "执行地皮保护指令延迟(毫秒)":5000,
+      "提示信息": "地皮系统",
+      "是否开启自定义地皮大小": true,
+      "每格价格": 1,
+      "非自定义时单个地皮价格": 100,
+      "触发词": [
+        "领地"
+      ],
+      "非自定义时地皮的范围": [
+        50,
+        50
+      ]
+    }
+  }
+  
 ]
