地皮组件完善
修复未读取的bug
暂时咕咕时不时写入文件
优化保护算法

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1672,10 +1672,10 @@
         "scoreboard players remove @a[name=\"[购买对象名字]\"] [货币计分板] [价格]"
       ],
       "地皮保护时执行的指令": [
-        "gamemode 2 @a[[非地皮合法进入者],[地皮范围],m=!2]",
-        "title @a[[地皮范围]] actionbar 你已经进入地皮范围\n地皮主人:[地皮主人]\n地皮范围:[地皮范围] "
+        "gamemode 2 @a[[非地皮合法进入者],[地皮范围],m=0]",
+        "title @a[[地皮范围]] actionbar 你已经进入地皮内\n地皮主人:[地皮主人]\n地皮坐标x:[地皮起点x],y:-60(暂不可变动),z:[地皮起点z]\n范围向x:[地皮dx],z:[地皮dz] "
       ],
-      "执行地皮保护指令延迟(毫秒)":5000,
+      "执行地皮保护指令延迟(毫秒)":500,
       "提示信息": "地皮系统",
       "是否开启自定义地皮大小": true,
       "每格价格": 1,
