--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,6 +133,19 @@ jobs:
         tar -xJf openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz
         rm openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz
         mv openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64 ~/
+    - name: Cache Openwrt mt7622 SDK
+      id: cache-openwrt-mt7622-sdk
+      uses: actions/cache@v3
+      with:
+        key: openwrt-sdk-mediatek-mt7622-cache
+        path: ~/openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64
+    - name: Download Openwrt mt7622 SDK
+      if: steps.cache-openwrt-mt7622-sdk.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://downloads.openwrt.org/releases/22.03.0-rc4/targets/mediatek/mt7622/openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        tar -xJf openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        rm openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        mv openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64 ~/
     - name: Pre-Build & configure go-raknet
       run: |
         make current
