Makefile: make `current` by default

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,7 +168,7 @@ jobs:
     - name: Build
       run: |
         export THEOS=~/theos
-        make
+        make all
     - name: Package for specific platforms
       run: |
         export THEOS=~/theos
