disable by default

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1692,7 +1692,7 @@
   {
     "名称": "OmegaSide旁加载组件系统",
     "描述": "加载自己编写的插件,语言不限,运行在omega_storage/side目录下,如果可能Omega将会自动部署运行环境",
-    "是否禁用": false,
+    "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
