energency bug fix (reduce 95% cpu usage)

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1646,7 +1646,7 @@
   {
     "名称": "第三方_by温柔_地皮组件",
     "描述": " 地皮白名单有且仅有99名额",
-    "是否禁用": false,
+    "是否禁用":  true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
