add performance analysis tool

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1720,5 +1720,15 @@
             }
         ]
     }
-}
+  },
+  {
+    "名称": "性能分析",
+    "描述": "用于帮助开发者分析性能问题的组件",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Core",
+    "配置": {
+
+    }
+  }
 ]
