check bot op permission before activate omega components

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1730,5 +1730,15 @@
     "配置": {
 
     }
+  },
+  {
+    "名称": "OP权限自检",
+    "描述": "检测机器人自身是否具有OP权限",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Core",
+    "配置": {
+
+    }
   }
 ]
