--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1688,6 +1688,125 @@
         50
       ]
     }
+  },
+  {
+    "名称": "公会系统",
+    "描述": "当前仅有公会排名还未完善 请不要使用 其余功能均可使用 如果有bug请在群里面@风也温柔",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Built-In",
+    "配置": {
+      "可设置公会权限的选择器":"@a[m=1]",
+      "设置公会权限触发词":"set",
+      "隐藏菜单触发词":"setop",
+      "禁止设置公会坐标":[[0,0,0]],
+      "一级保护指令": [
+        "title @a[x=[x],z=[z],dx=[Dx],dz=[Dz],dy=300,y=-60] actionbar §b[领地范围内]\n§e公会名字:§f[公会名字]",
+        "gamemode 2 @a[[领地范围内非会员],x=[x],z=[z],dx=[Dx],dz=[Dz],dy=300,y=-60,m=0]"		
+      ],
+      "保护延迟时间[秒]": 1,
+      "各种公会所需计分板":{
+        "权限计分板":"权限",
+        "购买公会计分板": "挖掘",
+        "银行存入计分板":"挖掘"
+      },
+      "各种提示词":{
+        "返回地皮时提示词":"欢迎回到 [公会名字] ",
+        "无地皮时提示":"[警告] 你没有地皮",
+        "权限不足时提示":"你所在公会权限不足开启此功能",
+        "公会菜单商品显示":"[i] 商品名:[商品] 价格:[价格]",
+        "商店购买失败提示":"[错误] 余额不足",
+        "邀请对方进入公会时提示":"[公会名字] 邀请你进入公会(y/n)",
+        "管理菜单显示":"§b[会长菜单]\n§a输入 §e0 §a§l邀请他人进入公会\n§a输入 §e1 §a§l设置他人权限\n§a输入 §e2 §a§l发布公告\n§a输入 §e3 §a§l设置二级保护区域\n§a输入 §e4 §a§l踢出公会成员§e5 §a§l删除公会§e6 §a§l查看公会信息§e7 §a§l删除成员",
+        "设置公会权限菜单模板":"[i] [公会名字]",
+        "暂无公会存在时提示词":"[错误] 抱歉现在还未有任何公会存在",
+        "显示个人信息模板":"[计分板名字] : [计分板分数] ",
+        "显示个人信息菜单开头":"[个人信息菜单]\n所属公会:[公会名字]\n公会权限:[公会权限]\n本人权限:[本人权限]\n",
+        "购买领地后提示":"[成功购买公会] 你的公会名字[公会名字]\n起点坐标:[起点坐标]\n终点坐标:[终点坐标]\n中心坐标:[中心坐标]",
+        "op隐藏菜单":"[op隐藏菜单]\n输入 0 查看指定公会信息 \n输入 1 修改指定公会"
+        ,"op隐藏菜单公会详细信息显示":"[公会名字]\n会长:[会长]\n成员:[成员]\n权限:[权限]\n中心坐标:[中心坐标]\n范围:[起始坐标]----[终点坐标]"
+      },
+      "显示个人信息所需计分板":{
+        "挖掘":"[贡献值]"
+  
+      },
+      "公会初始等级":1,
+      "最低公会等级可开启的功能": {
+        "buff加成":4,
+        "二级保护":4,
+        "传送点设置":4,
+        "商店功能":4,
+        "设置二级保护区域":4
+      },
+      "最低权限可使用功能": {
+        "可以t出其他成员": 3,		
+        "可以发布公告": 2,
+        "可以改变他人权限":2,								
+        "可以设置二级保护区": 3,																	
+        "可以进入二级保护区域":2										
+      },
+      "二级保护指令": [
+        "execute @a[scores={[权限计分板]=..[最低权限]},x=[x],y=[y],z=[z],dy=[Dy],dz=[Dz],dx=[Dx]] [x] [y] [z] tp @s ~-1~~-1",
+        "title @a[x=[x],y=[y],z=[z],dy=[Dy],dz=[Dz],dx=[Dx]] actionbar 你处于二级区域中范围"
+      ],
+      "公会价格": "20000",
+      "公会等级称呼": {
+        "1": "一级公会",
+        "2": "二级公会",
+        "3": "三级公会",
+        "4": "四级公会"
+      },
+    
+      "公会菜单显示": {
+        "0": "输入[i] 购买公会",
+        "1": "输入[i] 返回公会",
+        "2": "输入[i] 商店系统",
+        "3": "输入[i] 会长菜单",
+        "4": "输入[i] 公会排行",
+        "5": "输入[i] 个人信息"
+      },	
+      "成员等级称呼": {
+        "0": "成员",
+        "1": "会员",
+        "2": "管理员",
+        "3": "副会长",
+        "4": "会长"
+      },
+      "提示词": "公会系统",
+      "触发词": [
+        "公会"
+      ],
+      "购买领地时限制器": "@a[name=[player],scores={[购买计分板]=[价格]..},m=!2]",
+      "公会保护范围":{
+        "1":[150,150],
+        "2":[200,200],
+        "3":[250,250],
+        "4":[500,500]
+      },
+      "公会商店":{
+        "0":{
+          "商品名字":"a",
+          "商品英文":"a",
+          "商品价格":"200",
+          "使用的货币":"挖掘",
+          "购买时执行指令":[
+            "give @a[name=[购买者]] stone ",
+            "scoreboard players remove @a[name=\"[购买者]\"] [计分板] [购买价格]",
+            "/tellraw @a {\"rawtext\":[{\"text\":\"购买成功 消费 [购买价格] 购买 石头 一个\"}]}"
+          ],
+          "购买时检测指令":"testfor @a[name=[购买者],scores={[计分板]=[购买价格]..}]"	
+        },
+        "1":{
+          "商品名字":" ",
+          "商品英文":" ",
+          "商品价格":" ",
+          "使用的货币":" "
+        }
+      }
+        
+      
+    }
   }
+  
   
 ]
